Translate bundle_adjustment.tex

--- a/teoricas/teorica_08/slides.tex
+++ b/teoricas/teorica_08/slides.tex
@@ -20,9 +20,9 @@
 \bibliography{../../common/bibliography.bib}
 
 \subtitle{SLAM: Simultaneous Localization and Mapping}
-\title{Robótica Móvil}
+\title{Mobile Robotics}
 \author{Taihú Pire}
-\institute{Laboratorio de Robótica}
+\institute{Robotics Lab}
 \titlegraphic{\includegraphics[width=0.4\textwidth]{images/cifasis_logo.pdf}}
 \date{}
 
@@ -37,7 +37,7 @@
     \section{Bundle Adjustment}
     \input{src/bundle_adjustment.tex}
 	
-	\section{Bibliografía}
+	\section{Bibliography}
 	\input{src/bibliography.tex}
 	
 \end{document}
